media: AVDACodecAllocator now fails if threads don't start

Previously AVDACodecAllocator tried to gracefully handle threads failing
to start. To simplify its contract, now it considers threads failing to
to be an error.

BUG=670140
TEST=existing tests
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2540393002
Cr-Commit-Position: refs/heads/master@{#435756}

Former-commit-id: 997e9e7f24cf2c6b8433bbfeedeeaf5a6b7c6d13